--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "next-marketplace",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate:types": "payload generate:types",
-    "db:fresh": "payload migrate:fresh"
+    "generate:types": "PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
+    "db:fresh": "PAYLOAD_CONFIG_PATH=src/payload.config.ts payload migrate:fresh",
+    "db:seed": "bun run src/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
