--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "db:seed": "bun run src/seed.ts"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.1",
+    "@hookform/resolvers": "3.3.4",
     "@payloadcms/db-mongodb": "^3.52.0",
     "@payloadcms/next": "^3.52.0",
     "@payloadcms/payload-cloud": "^3.52.0",
