--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lucide-react": "^0.539.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.7.2",
     "payload": "^3.52.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.1",
